force-app/main/default/objects/OrderItem/fields/Recycled_KG_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>Recycled_KG_Order_Line__c</fullName>
    <formula>Recycled_KG_Per_Unit__c* Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Recycled KG per unit, multiplied by quantity bought</inlineHelpText>
    <label>Recycled KG Order Line</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>