force-app/main/default/objects/OrderItem/fields/Recycled_KG_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Recycled_KG_Per_Unit__c</fullName>
    <formula>PricebookEntry.Product2.Recycle_KG__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recycled KG Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>