force-app/main/default/objects/OrderItem/fields/RecycleID__c.field-meta.xml
<CustomField>
    <fullName>RecycleID__c</fullName>
    <formula>Order.Account.RecycleID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RecycleID</label>
    <type>Checkbox</type>
</CustomField>