force-app/main/default/objects/OrderItem/fields/RecycleIdProduct__c.field-meta.xml
<CustomField>
    <fullName>RecycleIdProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recycle Id Product</label>
    <type>Checkbox</type>
</CustomField>