force-app/main/default/objects/OrderItem/fields/shipping_address_for_supplier__c.field-meta.xml
<CustomField>
    <fullName>shipping_address_for_supplier__c</fullName>
    <label>shipping address for supplier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>