force-app/main/default/objects/OrderItem/fields/Standard_check__c.field-meta.xml
<CustomField>
    <fullName>Standard_check__c</fullName>
    <label>Standard check</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>