force-app/main/default/objects/OrderItem/fields/Supplier_Email__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Email__c</fullName>
    <label>Supplier Email</label>
    <type>Email</type>
</CustomField>