force-app/main/default/objects/OrderItem/fields/supplier_email_text__c.field-meta.xml
<CustomField>
    <fullName>supplier_email_text__c</fullName>
    <label>supplier email text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>