force-app/main/default/objects/OrderItem/fields/Supplier_location_name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_location_name__c</fullName>
    <label>Supplier location name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>