force-app/main/default/objects/OrderItem/fields/Supplier_PO_number__c.field-meta.xml
<CustomField>
    <fullName>Supplier_PO_number__c</fullName>
    <label>Supplier PO number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>