force-app/main/default/objects/OrderItem/fields/Supplier_total__c.field-meta.xml
<CustomField>
    <fullName>Supplier_total__c</fullName>
    <label>Supplier total</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>