force-app/main/default/objects/OrderItem/fields/Supplier_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Unit_Price__c</fullName>
    <label>Supplier Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>