force-app/main/default/objects/OrderItem/fields/SupplierPONumber__c.field-meta.xml
<CustomField>
    <fullName>SupplierPONumber__c</fullName>
    <displayFormat>SF-{00000000}</displayFormat>
    <label>Supplier PO number</label>
    <type>AutoNumber</type>
</CustomField>