force-app/main/default/objects/OrderItem/fields/Synced_to_3rd_Party__c.field-meta.xml
<CustomField>
    <fullName>Synced_to_3rd_Party__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Synced to 3rd Party</label>
    <type>Checkbox</type>
</CustomField>