force-app/main/default/objects/OrderItem/fields/This_year_sales_category__c.field-meta.xml
<CustomField>
    <fullName>This_year_sales_category__c</fullName>
    <formula>IF(YEAR(Order.Order_Account_ID__r.Enqix_Start_Date__c) = YEAR(TODAY()),&quot;New&quot;, IF(YEAR(Order.Order_Account_ID__r.Enqix_Date_Made_Dead__c) =2018, &quot;Prior Dead&quot;, IF(YEAR(Order.Order_Account_ID__r.Enqix_Date_Made_Dead__c) =2019, &quot;Dead&quot;, IF(YEAR(Order.Order_Account_ID__r.Enqix_Start_Date__c) =2018, &quot;Prior New&quot;, &quot;Base&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>This year sales category</label>
    <type>Text</type>
</CustomField>