force-app/main/default/objects/OrderItem/fields/TimeStamp_Insert__c.field-meta.xml
<CustomField>
    <fullName>TimeStamp_Insert__c</fullName>
    <label>TimeStamp Insert</label>
    <type>DateTime</type>
</CustomField>