force-app/main/default/objects/OrderItem/fields/TimeStamp_Update__c.field-meta.xml
<CustomField>
    <fullName>TimeStamp_Update__c</fullName>
    <label>TimeStamp Update</label>
    <type>DateTime</type>
</CustomField>