force-app/main/default/objects/OrderItem/fields/Tonnes_CO2_Saved__c.field-meta.xml
<CustomField>
    <fullName>Tonnes_CO2_Saved__c</fullName>
    <formula>IF(NOT(ISNULL(Tonnes_CO2_Saved_from_Weights__c)), Tonnes_CO2_Saved_from_Weights__c, 
 IF(NOT(ISNULL(Coffee_KG__c)), Coffee_KG__c * PricebookEntry.Product2.Tonnes_CO2_Saved_Per_KG__c, 0) + 
 IF(NOT(ISNULL(AD_KG__c)), AD_KG__c * PricebookEntry.Product2.Tonnes_CO2_Saved_Per_KG__c, 0) + 
 IF(NOT(ISNULL(Recycled_KG__c)), Recycled_KG__c * PricebookEntry.Product2.Tonnes_CO2_Saved_Per_KG__c, 0)
)</formula>
    <label>Tonnes CO2 Saved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>