force-app/main/default/objects/OrderItem/fields/Tonnes_CO2_Saved_from_Weights__c.field-meta.xml
<CustomField>
    <fullName>Tonnes_CO2_Saved_from_Weights__c</fullName>
    <label>Tonnes CO2 Saved from Weights</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>