force-app/main/default/objects/OrderItem/fields/Tonnes_CO2_Saved_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>Tonnes_CO2_Saved_Order_Line__c</fullName>
    <formula>Tonnes_CO2_Saved_Per_Unit__c* Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Tonnes CO2 saved per unit multiplied by quantity ordered</inlineHelpText>
    <label>Tonnes CO2 Saved Order Line</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>