force-app/main/default/objects/OrderItem/fields/Tonnes_CO2_Saved_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Tonnes_CO2_Saved_Per_Unit__c</fullName>
    <formula>PricebookEntry.Product2.CO2_Saved__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tonnes CO2 Saved Per Unit</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>