force-app/main/default/objects/OrderItem/fields/Total_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount__c</fullName>
    <label>Total Discount per item</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>