force-app/main/default/objects/OrderItem/fields/Total_KG__c.field-meta.xml
<CustomField>
    <fullName>Total_KG__c</fullName>
    <formula>WTE_KG__c + Coffee_KG__c + AD_KG__c + Recycled_KG__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total KG</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>