force-app/main/default/objects/OrderItem/fields/Total_KG_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>Total_KG_Order_Line__c</fullName>
    <formula>Total_KG_Per_Unit__c*Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total KG per unit multiplied by quantity ordered</inlineHelpText>
    <label>Total KG Order Line</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>