force-app/main/default/objects/OrderItem/fields/Total_KG_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Total_KG_Per_Unit__c</fullName>
    <formula>PricebookEntry.Product2.KG__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total KG Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>