force-app/main/default/objects/OrderItem/fields/Total_Price_Including_Partner__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_Including_Partner__c</fullName>
    <formula>Partner_Total_Price__c + (  Quantity *  UnitPrice  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price Including Partner</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>