force-app/main/default/objects/OrderItem/fields/Total_Supplier_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Supplier_Cost__c</fullName>
    <formula>Quantity *  Supplier_Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Supplier Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>