force-app/main/default/objects/OrderItem/fields/TotalDiscount__c.field-meta.xml
<CustomField>
    <fullName>TotalDiscount__c</fullName>
    <formula>Total_Discount__c *  Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>