force-app/main/default/objects/OrderItem/fields/Trees_Saved__c.field-meta.xml
<CustomField>
    <fullName>Trees_Saved__c</fullName>
    <formula>IF(NOT(ISNULL(Trees_Saved_from_Weights__c)), Trees_Saved_from_Weights__c, Recycled_KG__c * PricebookEntry.Product2.Trees_Saved_Per_KG__c)</formula>
    <label>Trees Saved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>