force-app/main/default/objects/OrderItem/fields/Trees_Saved_from_Weights__c.field-meta.xml
<CustomField>
    <fullName>Trees_Saved_from_Weights__c</fullName>
    <label>Trees Saved from Weights</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>