force-app/main/default/objects/OrderItem/fields/Trees_Saved_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>Trees_Saved_Order_Line__c</fullName>
    <formula>Trees_Saved_Per_Unit__c* Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of trees saved per unit, multiplied by quantity ordered</inlineHelpText>
    <label>Trees Saved Order Line</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>