force-app/main/default/objects/OrderItem/fields/Trees_Saved_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Trees_Saved_Per_Unit__c</fullName>
    <formula>PricebookEntry.Product2.Trees_Saved__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trees Saved Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>