force-app/main/default/objects/OrderItem/fields/WasteDestination__c.field-meta.xml
<CustomField>
    <fullName>WasteDestination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Waste Destination</label>
    <referenceTo>WasteDestination__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>