force-app/main/default/objects/OrderItem/fields/WTE_KG_from_Weights__c.field-meta.xml
<CustomField>
    <fullName>WTE_KG_from_Weights__c</fullName>
    <label>WTE KG from Weights</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>