force-app/main/default/objects/OrderItem/fields/WTE_KG_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>WTE_KG_Order_Line__c</fullName>
    <formula>WTE_KG_Per_Unit__c* Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>WTE KG per unit multiplied by quantity ordered</inlineHelpText>
    <label>WTE KG Order Line</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>