force-app/main/default/objects/OrderItem/fields/WTE_KG_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>WTE_KG_Per_Unit__c</fullName>
    <formula>PricebookEntry.Product2.WTE_KG__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WTE KG Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>