force-app/main/default/objects/OrderItem/fields/WTE_KG_Per_Unit_Manual__c.field-meta.xml
<CustomField>
    <fullName>WTE_KG_Per_Unit_Manual__c</fullName>
    <label>WTE KG Per Unit Manual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>