force-app/main/default/objects/OrderItem/fields/WTNProduct__c.field-meta.xml
<CustomField>
    <fullName>WTNProduct__c</fullName>
    <label>WTN Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>WTNProduct</valueSetName>
    </valueSet>
</CustomField>