force-app/main/default/objects/OrderItem/validationRules/DetrackStatusEqualInProgress.validationRule-meta.xml
<ValidationRule>
    <fullName>DetrackStatusEqualInProgress</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL(Order.Detrack_Status__c,&apos;In Progress&apos;), $User.Username 
&lt;&gt; 
&apos;integration@thefirstmile.co.uk&apos;,
$User.Username 
&lt;&gt; 
&apos;customer.portal@thefirstmile.co.uk.integrate&apos;)</errorConditionFormula>
    <errorMessage>Do not allow edits to orders or order products if the order is out for delivery</errorMessage>
</ValidationRule>