force-app/main/default/objects/OrderItem/validationRules/RestrictCreation.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictCreation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(), OR(ISPICKVAL(Order.Status, &apos;Delivered&apos;), ISPICKVAL(Order.Status, &apos;Invoiced&apos;)))</errorConditionFormula>
    <errorDisplayField>OrderId</errorDisplayField>
    <errorMessage>Order Product cannot be added to Order that is already Invoiced or Delivered.</errorMessage>
</ValidationRule>